package TP4.Ej4;

public interface Movable {

    void moveNorth(double delta);

    void moveSouth(double delta);

    void moveWest(double delta);

    void moveEast(double delta);

}

